--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 
 form {
     height: 100vh;
+    position: relative;
 }
 
 .container {
@@ -49,11 +50,32 @@ form {
     border: none;
 }
 
-/* ------------------------ Form 1 ----------------------- */
+.extra-margin{
+    margin-bottom: 70px !important;
+}
+
+/* ------------------------ fieldset 1 ----------------------- */
 
 fieldset {
     border: none;
-    width: 38rem;
+    visibility: hidden;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    transition: 0.3s;
+}
+
+fieldset.current {
+    visibility: visible;
+    opacity: 1;
+}
+
+.max-width {
+    max-width: 38rem;
     margin: auto;
 }
 
@@ -144,7 +166,7 @@ fieldset {
     position: relative;
 }
 
-#input-password{
+#input-password {
     padding-right: calc(1.125rem + 3.5em);
 }
 
@@ -179,65 +201,339 @@ fieldset {
     box-shadow: inset 0px 0px 0px 1px hsla(240, 4%, 85%, 0), 0px 0px 0px 2px var(--color-primary), 0 0.3px 0.4px rgba(0, 0, 0, 0.025), 0 0.9px 1.5px rgba(0, 0, 0, 0.05), 0 3.5px 6px rgba(0, 0, 0, 0.1);
 }
 
-#password-btn{
-    height: 20px;
+#password-btn {
     color: var(--text-dark);
+    font-size: 22px;
 }
 
-#password-btn:focus{
+#password-btn:focus {
     outline: none;
     color: var(--color-primary);
 }
 
-.password-strength{
+.password-strength {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 0.5625rem;
-    margin-top: 0.5625rem;
+    margin: 0.5625rem 0;
 }
 
-.password-strength-meter{
+.password-strength-meter {
     width: 50%;
-}
-
-.password-strength-meter span{
-    width: 100%;
-    height: 8px;
-    border-radius: 50%;
-    background-color: aquamarine;
     position: relative;
 }
 
-.password-strength-meter span::before{
-    background-color: violet;
+.strength-meter-range {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    width: 100%;
+    height: 8px;
+    border-radius: 50em;
+    background-color: hsl(240, 4%, 85%);
+    overflow: hidden;
+    z-index: -3;
 }
 
-.password-strength-quality p{
+.strength-meter {
+    --strength: 25;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 8px;
+    width: calc(1% * var(--strength));
+    overflow: hidden;
+    background-color: hsl(342, 89%, 48%);
+    transition: 0.2s;
+    border-radius: 50em;
+}
+
+.password-strength-quality p {
     color: hsl(225, 4%, 47%);
+    font-size: var(--fs-sm);
 }
 
-.password-strength-quality span{
-    color: hsl(230, 7%, 23%);;
+.password-strength-quality span {
+    color: hsl(230, 7%, 23%);
+    ;
 }
 
-.password-strength-requirement ul{
+.password-strength-requirement ul {
     list-style: none;
-} 
+}
 
-.password-strength-requirement ul li{
+.password-strength-requirement ul li {
     display: flex;
     align-items: center;
-    color: hsl(342, 89%, 48%);
+    color: hsl(233, 7%, 23%);
     line-height: 1.2;
     margin-bottom: 0.1875rem;
 }
 
-.password-strength-requirement ul li i{
+.password-strength-requirement ul li i {
     font-size: 18px;
     margin-right: 4px;
+}
+
+/* ------------------------ fieldset 2 ----------------------- */
+
+.main-content {
+    padding: 2rem 0;
+}
+
+.main-content>p {
+    margin-bottom: 1.125rem;
+    color: hsl(230, 7%, 23%);
+    font-size: 18px;
+}
+
+.product-item {
+    grid-column: span 6;
+    overflow: hidden;
+    box-shadow: 0 0.3px 0.4px rgba(0, 0, 0, 0.025), 0 0.9px 1.5px rgba(0, 0, 0, 0.05), 0 3.5px 6px rgba(0, 0, 0, 0.1);
+    ;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 0.375em;
+    transition: .3s ease;
+    position: relative;
+    user-select: none;
+}
+
+.product-item:hover {
+    cursor: pointer;
+    box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.03), 0 3.1px 5.5px rgba(0, 0, 0, 0.08), 0 14px 25px rgba(0, 0, 0, 0.12);
+    ;
+}
+
+.product-item img {
+    width: 100%;
+}
+
+.product-item-content {
+    padding: 1.125rem;
+}
+
+.product-item-content h4 {
+    margin-top: 0;
+    line-height: 1.2;
+    margin-bottom: calc(1em*.3125*1);
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.product-item-content p {
+    margin-top: 0;
+    color: hsl(225, 4%, 47%);
+    font-size: var(--fs-sm);
+    line-height: 1.4;
+}
+
+.product-icon{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100px;
+    height: 100px;
+    background-color: var(--color-primary);
+    transform: translate(1px,-1px);
+    pointer-events: none;
+    clip-path: polygon(15% 0%,100% 0%,100% 85%);
+}
+
+.product-icon i{
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 26px;
+    color: hsl(0, 0%, 100%);
+}
+
+.product-item.select{
+    box-shadow: 0 0.3px 0.4px rgba(0, 0, 0, 0.025),0 0.9px 1.5px rgba(0, 0, 0, 0.05),0 3.5px 6px rgba(0, 0, 0, 0.1),0 0 0 2px var(--color-primary);
+}
+
+.product-icon.icon-hide{
+    visibility: hidden;
+}
+
+/* ------------------------ fieldset 3 ----------------------- */
+
+.choice-buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5625rem;
+}
+
+.choice-btn{
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 0.375em;
+    box-shadow: 0 0 0 1px hsl(240, 4%, 85%);
+    user-select: none;
+    cursor: pointer;
+    transition: .2s;
+    padding: 1.125rem;
+}
+
+.choice-btn.focus{
+    outline: none;
+    box-shadow: 0 0 0 2px var(--color-primary),0 0 0 4px hsla(250,84%,54%,0.2);
+}
+
+.checkbox-input-box,
+.choice-btn-fallback{
+    display: flex;
+    align-items: center;
+}
+
+.choice-btn-fallback label{
+    display: none;   
+}
+
+.choice-btn-fallback p{
+    color: hsl(230, 13%, 9%);
+    font-weight: 700;
+    font-size: 18px; 
+    cursor: pointer;   
+}
+
+.checkbox-input-box{
+    position: relative;
+    margin-right: 40px;
+}
+
+.checkbox-input{
+    appearance: none;
+    height: 20px;
+    width: 20px;
+    margin-right: 20px;
+    background-color: hsl(0, 0%, 100%);
+    border-radius: 4px;
+    border: 1px solid hsla(240, 4%, 65%, 0.65);
+    box-shadow: 0 0.1px 0.3px rgba(0, 0, 0, 0.06),0 1px 2px rgba(0, 0, 0, 0.12);
+    transition: 0.2s;
+    display: inline-block;
+    position: absolute;
+    cursor: pointer;
+}
+
+.checkbox-input-box i{
+    position: absolute;
+    color: hsl(0, 0%, 100%);
+    left: 2px;
+}
+
+.checkbox-input.checked{
+    background-color: var(--color-primary);
+    height: 20px;
+    width: 20px;
+}
+
+
+/* ------------------------ Footer ----------------------- */
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+    width: 100%;
+    background-color: hsl(0, 0%, 100%);
+    box-shadow: 0 0.9px 1.5px rgba(0, 0, 0, 0.03), 0 3.1px 5.5px rgba(0, 0, 0, 0.08), 0 14px 25px rgba(0, 0, 0, 0.12);
+    ;
+    padding: 1.125rem 0;
+}
+
+.back,
+.next-submit {
+    grid-column: span 3;
+}
+
+.form-steps {
+    grid-column: span 6;
+}
+
+.back button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 18px;
+}
+
+.back button i {
+    margin-right: 6px;
+    font-size: 15px;
+}
+
+.form-steps p {
+    color: hsl(225, 4%, 47%);
+    font-size: var(--fs-sm);
+    margin-bottom: 0.75rem;
+}
+
+.indicator {
+    position: relative;
+}
+
+.indicator-range {
+    position: absolute;
+    width: 100%;
+    height: 8px;
+    background-color: hsl(240, 4%, 85%);
+    border-radius: 50em;
+}
+
+.indicator-width {
+    position: absolute;
+    width: 33%;
+    height: 8px;
+    background-color: var(--color-primary);
+    border-radius: 50em;
+    z-index: 5;
+}
+
+.next-submit {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.next button,
+.submit button {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-size: 18px;
+}
+
+.next button i {
+    margin-left: 6px;
+    font-size: 15px;
+}
+
+.submit button i{
+    margin-right: 6px;
+    font-size: 16px;
+}
+
+.btn-primary {
+    background-color: var(--color-primary);
+    color: hsl(0, 0%, 100%);
+    box-shadow: inset 0px 1px 0px hsla(0, 0%, 100%, 0.15), 0px 1px 3px hsla(250, 84%, 38%, 0.25), 0px 2px 6px hsla(250, 84%, 38%, 0.1), 0px 6px 10px -2px hsla(250, 84%, 38%, 0.25);
+}
+
+.btn-primary:hover {
+    background-color: hsl(250, 84%, 54%);
+    box-shadow: inset 0px 1px 0px hsla(0, 0%, 100%, 0.15), 0px 1px 3px hsla(250, 84%, 38%, 0.25), 0px 2px 6px hsla(250, 84%, 38%, 0.1);
+}
+
+#back-btn.vs-hidden{
+    visibility: hidden;
+}
+
+.next.none{
+    display: none;
+}
+
+.submit{
+    display: none;
 }
