--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ form {
     border: none;
 }
 
-.extra-margin{
+.extra-margin {
     margin-bottom: 70px !important;
 }
 
@@ -87,6 +87,10 @@ fieldset.current {
     line-height: 1.1;
     color: var(--text-light);
     font-size: var(--fs-sm);
+}
+
+.header > p span{
+    display: none;
 }
 
 .header h1 {
@@ -216,7 +220,7 @@ fieldset.current {
     align-items: center;
     justify-content: space-between;
     gap: 0.5625rem;
-    margin: 0.5625rem 0;
+    margin-top: 0.5625rem;
 }
 
 .password-strength-meter {
@@ -226,7 +230,7 @@ fieldset.current {
 
 .strength-meter-range {
     position: absolute;
-    top: 0;
+    top: -3px;
     left: 0;
     width: 100%;
     height: 8px;
@@ -239,7 +243,7 @@ fieldset.current {
 .strength-meter {
     --strength: 25;
     position: absolute;
-    top: 0;
+    top: -3px;
     left: 0;
     height: 8px;
     width: calc(1% * var(--strength));
@@ -247,6 +251,10 @@ fieldset.current {
     background-color: hsl(342, 89%, 48%);
     transition: 0.2s;
     border-radius: 50em;
+}
+
+.password-strength.strength-hidden {
+    display: none;
 }
 
 .password-strength-quality p {
@@ -257,6 +265,10 @@ fieldset.current {
 .password-strength-quality span {
     color: hsl(230, 7%, 23%);
     ;
+}
+
+.password-strength-requirement {
+    margin-top: 0.5625rem;
 }
 
 .password-strength-requirement ul {
@@ -272,7 +284,7 @@ fieldset.current {
 }
 
 .password-strength-requirement ul li i {
-    font-size: 18px;
+    font-size: var(--fs-sm);
     margin-right: 4px;
 }
 
@@ -329,19 +341,19 @@ fieldset.current {
     line-height: 1.4;
 }
 
-.product-icon{
+.product-icon {
     position: absolute;
     top: 0;
     right: 0;
     width: 100px;
     height: 100px;
     background-color: var(--color-primary);
-    transform: translate(1px,-1px);
+    transform: translate(1px, -1px);
     pointer-events: none;
-    clip-path: polygon(15% 0%,100% 0%,100% 85%);
+    clip-path: polygon(15% 0%, 100% 0%, 100% 85%);
 }
 
-.product-icon i{
+.product-icon i {
     position: absolute;
     top: 15px;
     right: 15px;
@@ -349,23 +361,23 @@ fieldset.current {
     color: hsl(0, 0%, 100%);
 }
 
-.product-item.select{
-    box-shadow: 0 0.3px 0.4px rgba(0, 0, 0, 0.025),0 0.9px 1.5px rgba(0, 0, 0, 0.05),0 3.5px 6px rgba(0, 0, 0, 0.1),0 0 0 2px var(--color-primary);
+.product-item.select {
+    box-shadow: 0 0.3px 0.4px rgba(0, 0, 0, 0.025), 0 0.9px 1.5px rgba(0, 0, 0, 0.05), 0 3.5px 6px rgba(0, 0, 0, 0.1), 0 0 0 2px var(--color-primary);
 }
 
-.product-icon.icon-hide{
+.product-icon.icon-hide {
     visibility: hidden;
 }
 
 /* ------------------------ fieldset 3 ----------------------- */
 
-.choice-buttons{
+.choice-buttons {
     display: flex;
     flex-direction: column;
     gap: 0.5625rem;
 }
 
-.choice-btn{
+.choice-btn {
     background-color: hsl(0, 0%, 100%);
     border-radius: 0.375em;
     box-shadow: 0 0 0 1px hsl(240, 4%, 85%);
@@ -375,34 +387,34 @@ fieldset.current {
     padding: 1.125rem;
 }
 
-.choice-btn.focus{
+.choice-btn.focus {
     outline: none;
-    box-shadow: 0 0 0 2px var(--color-primary),0 0 0 4px hsla(250,84%,54%,0.2);
+    box-shadow: 0 0 0 2px var(--color-primary), 0 0 0 4px hsla(250, 84%, 54%, 0.2);
 }
 
 .checkbox-input-box,
-.choice-btn-fallback{
+.choice-btn-fallback {
     display: flex;
     align-items: center;
 }
 
-.choice-btn-fallback label{
-    display: none;   
+.choice-btn-fallback label {
+    display: none;
 }
 
-.choice-btn-fallback p{
+.choice-btn-fallback p {
     color: hsl(230, 13%, 9%);
     font-weight: 700;
-    font-size: 18px; 
-    cursor: pointer;   
+    font-size: 18px;
+    cursor: pointer;
 }
 
-.checkbox-input-box{
+.checkbox-input-box {
     position: relative;
     margin-right: 40px;
 }
 
-.checkbox-input{
+.checkbox-input {
     appearance: none;
     height: 20px;
     width: 20px;
@@ -410,20 +422,20 @@ fieldset.current {
     background-color: hsl(0, 0%, 100%);
     border-radius: 4px;
     border: 1px solid hsla(240, 4%, 65%, 0.65);
-    box-shadow: 0 0.1px 0.3px rgba(0, 0, 0, 0.06),0 1px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0.1px 0.3px rgba(0, 0, 0, 0.06), 0 1px 2px rgba(0, 0, 0, 0.12);
     transition: 0.2s;
     display: inline-block;
     position: absolute;
     cursor: pointer;
 }
 
-.checkbox-input-box i{
+.checkbox-input-box i {
     position: absolute;
     color: hsl(0, 0%, 100%);
     left: 2px;
 }
 
-.checkbox-input.checked{
+.checkbox-input.checked {
     background-color: var(--color-primary);
     height: 20px;
     width: 20px;
@@ -490,6 +502,7 @@ footer {
     background-color: var(--color-primary);
     border-radius: 50em;
     z-index: 5;
+    transition: .2s;
 }
 
 .next-submit {
@@ -510,7 +523,7 @@ footer {
     font-size: 15px;
 }
 
-.submit button i{
+.submit button i {
     margin-right: 6px;
     font-size: 16px;
 }
@@ -526,14 +539,181 @@ footer {
     box-shadow: inset 0px 1px 0px hsla(0, 0%, 100%, 0.15), 0px 1px 3px hsla(250, 84%, 38%, 0.25), 0px 2px 6px hsla(250, 84%, 38%, 0.1);
 }
 
-#back-btn.vs-hidden{
+#back-btn.VShidden {
     visibility: hidden;
 }
 
-.next.none{
+#next-btn.none,
+#submit-btn.none {
     display: none;
 }
 
-.submit{
-    display: none;
+
+/* ------------------------ Media Queries ----------------------- */
+
+@media only screen and (max-width: 1024px) {
+    :root {
+        --fs-sm: calc(calc((1rem / 1.2)/1.2)*1.2);
+        --fs-md: calc(calc(calc((1.125rem / 1.215)/1.215)*1.215)*1.215*1.215);
+        --fs-lg: calc(calc(calc(calc(calc((1rem / 1.2)/1.2)*1.2)*1.2*1.2)*1.2)*1.2);
+    }
+
+    .container {
+        width: calc(100% - 2.5rem);
+    }
+
+    .header {
+        padding-top: calc(1.25 * 1rem);
+    }
+
+    .header > p span{
+        display: inline-block;
+    }
+
+    .profile {
+        padding-top: calc(1.25 * 1rem);
+        margin-bottom: calc(1.25 * 1rem);
+    }
+
+    .row {
+        gap: 0.75rem;
+    }
+
+    .btn {
+        padding: calc(0.375 * 1rem) calc(0.75 * 1rem);
+    }
+
+    .grid {
+        gap: calc(0.75 * 1rem) calc(0.75 * 1rem);
+    }
+
+    .name,
+    .email {
+        grid-column: span 12;
+    }
+
+    .name label,
+    .email label,
+    .password label {
+        margin-bottom: calc(0.375 * 1rem);
+    }
+
+    .input-form {
+        font-size: 16px;
+        padding: calc(0.375 * 1rem) calc(0.5 * 1rem);
+    }
+
+    .password-strength {
+        margin-top: calc(0.375 * 1rem);
+    }
+
+    .password-strength-requirement {
+        margin-top: calc(0.375 * 1rem);
+    }
+
+    .password-strength-requirement ul li i {
+        font-size: 18px;
+        margin-right: 4px;
+    }
+
+    .password-strength-requirement ul li {
+        margin-bottom: calc(0.125 * 1rem);
+    }
+
+    .password-strength-requirement ul li span {
+        font-size: var(--fs-sm);
+    }
+
+    .main-content {
+        padding: calc(1.25 * 1rem) 0;
+    }
+
+    .main-content>p {
+        margin-bottom: calc(0.75 * 1rem);
+        font-size: 16px;
+    }
+
+    .product-item-content {
+        padding: calc(0.75 * 1rem);
+    }
+
+    .product-item-content h4 {
+        font-size: 16px;
+    }
+
+    .choice-btn {
+        padding: calc(0.75 * 1rem);
+    }
+
+    .choice-btn-fallback p {
+        font-size: 16px;
+        position: relative;
+        left: -5px;
+    }
+
+    .checkbox-input {
+        margin-right: 10px;
+    }
+
+    .choice-buttons {
+        gap: calc(0.375 * 1rem);
+    }
+
+    footer {
+        padding: calc(0.75 * 1rem) 0;
+    }
+
+    .back,
+    .next-submit {
+        grid-column: span 6;
+    }
+
+    .form-steps {
+        display: none;
+    }
+
+    .next {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .back button,
+    .next button,
+    .submit button {
+        justify-content: center;
+        font-size: 16px;
+        width: 100%;
+    }
+
+    .back button i,
+    .next button i,
+    .submit button i {
+        font-size: 13px;
+    }
+}
+
+@media only screen and (max-width: 511px){
+    .file-upload{
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+    .extra-margin {
+        margin-bottom: 56px !important;
+    }
+    .password-strength{
+        flex-direction: column;
+        justify-content: initial;
+        align-items: initial;
+        margin-top: 0.5625rem;
+    }
+    .password-strength-meter{
+        width: 100%;
+    }
+    #password-btn{
+        font-size: 20px;
+    }
+    .product-item {
+        grid-column: span 12;
+    }
 }
